tests/cli/exec003/expected
Hello!
Error: Can't find an implementation for Num (IO ?a).

(Interactive):1:1--1:6
 1 | 1 + 2
     ^^^^^

------
Hello!
Error: Do block cannot be empty

(Interactive):1:1--1:3
 1 | do
     ^^

------
Hello!
Error: Couldn't parse any alternatives:
1: Expected 'case', 'if', 'do', application or operator expression.

(Interactive):1:1--1:3
 1 | !!
     ^^
... (84 others)
------
Hello!
Error: Undefined name undefined. 

(Interactive):1:1--1:10
 1 | undefined
     ^^^^^^^^^

